--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,54 @@
 }
 /* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-	background: #FF0000;
+	background: var(--gray-secondary);
 }
 
 * {
 	overscroll-behavior: none;
 }
+
+/* @keyframes aniHorizontal {
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+ */
+/* @keyframes aniHorizontal {
+  0% {
+    background-position: -100% 0;
+  }
+
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+.datagrid__row {
+  position: relative;
+}
+
+.datagrid__row:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation-name: aniHorizontal;
+  animation-duration: 3.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  background: linear-gradient(
+    to right,
+    #cccccc 2%,
+    #666666 18%,
+    #cccccc 33%
+  );
+  background-size: 50%;
+	mix-blend-mode: overlay;
+} */
 
 /* @media (prefers-color-scheme: light) {
 	:root {
