--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 	font-family: "Montserrat Alternates", "Noto Sans TC", "Noto Sans JP",
 		sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 2.25vmin;
 	/* line-height: 1.5;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -46,6 +46,12 @@
 * {
 	overscroll-behavior: none;
 }
+
+/* @media screen and (max-width: 768px) {
+	:root {
+		font-size: 12px;
+	}
+} */
 
 /* @media (prefers-color-scheme: light) {
 	:root {
